--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Welcome to my professional introduction page. I am Olli Heikkinen, a passionate and experienced Senior Biomedical Engineer at Oura, specializing in innovative health technology solutions. With a strong background in biomedical engineering, I focus on designing and developing cutting-edge tools that empower individuals to better understand and optimize their health.
         </p>
         <p>
-            My expertise spans wearable technology, signal processing, and data-driven health insights, and I take pride in contributing to Oura's mission of improving global well-being through science and technology. Feel free to connect with me to learn more about my professional journey and projects.
+            My expertise spans wearable technology, signal processing, machine learning, and software design for medical devices.
         </p>
         <footer>
             &copy; 2024 Olli Heikkinen. All Rights Reserved.
