--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="profile.jpg" alt="Olli Heikkinen's Picture" class="profile-picture">
+        <img src="profile.png" alt="Olli Heikkinen's Picture" class="profile-picture">
         <h1>Olli Heikkinen</h1>
         <h2>Senior Biomedical Engineer at Oura</h2>
         <p>
