--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <div class="container">
         <h1>Olli Heikkinen</h1>
+        <img src="profile.png" alt="Olli Heikkinen's Picture" class="profile-picture">
         <h2>Senior Biomedical Engineer at Oura</h2>
         <p>
             Welcome to my professional introduction page. I am Olli Heikkinen, a passionate and experienced Senior Biomedical Engineer at Oura, specializing in innovative health technology solutions. With a strong background in biomedical engineering, I focus on designing and developing cutting-edge tools that empower individuals to better understand and optimize their health.
