Add linkedin link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
             font-size: 0.9em;
             color: #777;
         }
+        .linkedin-link {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+        }
+        .linkedin-link a {
+            color: #0077b5;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .linkedin-link a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -54,6 +67,11 @@
         <p>
             My expertise spans wearable technology, signal processing, machine learning, and software design for medical devices.
         </p>
+        <div class="linkedin-link">
+            <a href="https://www.linkedin.com/in/olliheikkinen/" target="_blank">
+                Visit my LinkedIn profile
+            </a>
+        </div>
         <footer>
             &copy; 2024 Olli Heikkinen. All Rights Reserved.
         </footer>
